--- a/sdk/parents/azure-sdk-parent/pom.xml
+++ b/sdk/parents/azure-sdk-parent/pom.xml
@@ -283,6 +283,22 @@
           <artifactId>maven-install-plugin</artifactId>
           <version>3.1.3</version> <!-- {x-version-update;org.apache.maven.plugins:maven-install-plugin;external_dependency} -->
         </plugin>
+
+        <plugin>
+          <groupId>org.owasp</groupId>
+          <artifactId>dependency-check-maven</artifactId>
+          <version>11.1.1</version> <!-- {x-version-update;org.owasp:dependency-check-maven;external_dependency} -->
+          <configuration>
+            <skipProvidedScope>true</skipProvidedScope>
+          </configuration>
+          <executions>
+            <execution>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
