--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -1,7 +1,5 @@
-trigger: none
-
 parameters:
-  DisableAzureResourceCreation: true
+  DisableAzureResourceCreation: false
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-tests.yml
