--- a/sdk/tables/azure-data-tables/pom.xml
+++ b/sdk/tables/azure-data-tables/pom.xml
@@ -26,6 +26,30 @@ Licensed under the MIT License.
     </site>
   </distributionManagement>
 
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.openrewrite.maven</groupId>
+        <artifactId>rewrite-maven-plugin</artifactId>
+        <version>6.0.5</version>
+        <configuration>
+          <exportDatatables>true</exportDatatables>
+          <activeRecipes>
+            <recipe>com.azure.openrewrite.util.FindAsyncApiUsageRecipe</recipe>
+          </activeRecipes>
+        </configuration>
+        <dependencies>
+          <dependency>
+            <groupId>com.azure</groupId>
+            <artifactId>azure-openrewrite</artifactId>
+            <version>1.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-openrewrite;dependency} -->
+          </dependency>
+        </dependencies>
+
+      </plugin>
+    </plugins>
+  </build>
+
   <scm>
     <url>scm:git:https://github.com/Azure/azure-sdk-for-java</url>
     <connection>scm:git:git@github.com:Azure/azure-sdk-for-java.git</connection>
