access to ServiceConnection: xxx-openai

--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -3,3 +3,4 @@ extends:
   parameters:
     ServiceDirectory: openai
     DisableAzureResourceCreation: true
+    ServiceConnection: azure-sdk-tests-openai
