access to ServiceConnection: xxx-openai in CloudConfig

--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -3,4 +3,6 @@ extends:
   parameters:
     ServiceDirectory: openai
     DisableAzureResourceCreation: true
-    ServiceConnection: azure-sdk-tests-openai
+    CloudConfig:
+      Public:
+        ServiceConnection: azure-sdk-tests-openai
