--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -6,3 +6,13 @@ extends:
     CloudConfig:
       Public:
         ServiceConnection: azure-sdk-tests-openai
+    Artifacts:
+      - name: azure-ai-openai
+        groupId: com.azure
+        safeName: azureaiopenai
+    EnvVars:
+      AZURE_OPENAI_ENDPOINT: $(AOAI-ENDPOINT-SWEDENCENTRAL)
+      AZURE_OPENAI_KEY: $(AOAI-API-KEY-SWEDENCENTRAL)
+      NON_AZURE_OPENAI_KEY: $(OPENAI-API-KEY)
+      AZURE_TEST_RUN_LIVE: 'true'
+      API_VERSION_GA: '2024-06-01'
