testing without using service connection

--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -3,16 +3,4 @@ extends:
   parameters:
     ServiceDirectory: openai
     DisableAzureResourceCreation: true
-    CloudConfig:
-      Public:
-        ServiceConnection: azure-sdk-tests-openai
-    Artifacts:
-      - name: azure-ai-openai
-        groupId: com.azure
-        safeName: azureaiopenai
-    EnvVars:
-      AZURE_OPENAI_ENDPOINT: $(AOAI-ENDPOINT-SWEDENCENTRAL)
-      AZURE_OPENAI_KEY: $(AOAI-API-KEY-SWEDENCENTRAL)
-      NON_AZURE_OPENAI_KEY: $(OPENAI-API-KEY)
-      AZURE_TEST_RUN_LIVE: 'true'
-      API_VERSION_GA: '2024-06-01'
+    UseFederatedAuth: false
