add artifacts name

--- a/sdk/openai/aisource.yml
+++ b/sdk/openai/aisource.yml
@@ -4,3 +4,7 @@ extends:
     ServiceDirectory: openai
     DisableAzureResourceCreation: true
     UseFederatedAuth: false
+    Artifacts:
+      - name: azure-ai-openai
+        groupId: com.azure
+        safeName: azureaiopenai
