--- a/sdk/spring/spring-cloud-azure-docker-compose/pom.xml
+++ b/sdk/spring/spring-cloud-azure-docker-compose/pom.xml
@@ -77,6 +77,18 @@
       <version>12.24.0</version> <!-- {x-version-update;com.azure:azure-storage-queue;dependency} -->
       <optional>true</optional>
     </dependency>
+    <dependency>
+      <groupId>com.azure</groupId>
+      <artifactId>azure-messaging-servicebus</artifactId>
+      <version>7.17.8</version> <!-- {x-version-update;com.azure:azure-messaging-servicebus;dependency} -->
+      <optional>true</optional>
+      <exclusions>
+        <exclusion>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-xml</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -115,6 +127,12 @@
       <groupId>org.assertj</groupId>
       <artifactId>assertj-core</artifactId>
       <version>3.26.3</version> <!-- {x-version-update;springboot3_org.assertj:assertj-core;external_dependency} -->
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.awaitility</groupId>
+      <artifactId>awaitility</artifactId>
+      <version>4.2.0</version> <!-- {x-version-update;org.awaitility:awaitility;external_dependency} -->
       <scope>test</scope>
     </dependency>
   </dependencies>
