Additional pipeline changes

--- a/sdk/core/ci.yml
+++ b/sdk/core/ci.yml
@@ -171,6 +171,13 @@ extends:
       - name: perf-test-core
         groupId: com.azure
 
+    # This needs to be temporarily here for the PR pipeline.
+    MatrixConfigs:
+      - Name: Java_ci_test_base
+        Path: eng/pipelines/templates/stages/platform-matrix.json
+        Selection: sparse
+        NonSparseParameters: Agent
+        GenerateVMJobs: true
     # Run separate version override tests using a different artifacts list
     # This matrix config overrides the ArtifactsJson variable
     AdditionalMatrixConfigs:
@@ -184,4 +191,3 @@ extends:
         parameters:
           AdditionalMatrixReplace:
             - TestFromSource=(.*)/true
-
