--- a/sdk/serialization/ci.yml
+++ b/sdk/serialization/ci.yml
@@ -46,6 +46,14 @@ extends:
         safeName: azurexml
         releaseInBatch: ${{ parameters.release_azurexml }}
 
+    # This needs to be temporarily here for the PR pipeline.
+    MatrixConfigs:
+      - Name: Java_ci_test_base
+        Path: eng/pipelines/templates/stages/platform-matrix.json
+        Selection: sparse
+        NonSparseParameters: Agent
+        GenerateVMJobs: true
+
     # Run separate version override tests using a different artifacts list
     # This matrix config overrides the ArtifactsJson variable
     AdditionalMatrixConfigs:
