--- a/sdk/resourcemanager/azure-resourcemanager/pom.xml
+++ b/sdk/resourcemanager/azure-resourcemanager/pom.xml
@@ -191,7 +191,7 @@
     <dependency>
       <groupId>com.azure.resourcemanager</groupId>
       <artifactId>azure-resourcemanager-search</artifactId>
-      <version>2.47.0</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-search;current} -->
+      <version>2.48.0-beta.1</version> <!-- {x-version-update;com.azure.resourcemanager:azure-resourcemanager-search;current} -->
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
