--- a/sdk/clientcore/annotation-processor-test/pom.xml
+++ b/sdk/clientcore/annotation-processor-test/pom.xml
@@ -70,12 +70,6 @@
       <version>5.11.2</version> <!-- {x-version-update;org.junit.jupiter:junit-jupiter-params;external_dependency} -->
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>io.clientcore</groupId>
-      <artifactId>annotation-processor</artifactId>
-      <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;current} -->
-    </dependency>
   </dependencies>
 
   <build>
@@ -108,9 +102,21 @@
               <annotationProcessors>
                 <annotationProcessor>io.clientcore.annotation.processor.AnnotationProcessor</annotationProcessor>
               </annotationProcessors>
+
+              <compilerArgs>
+                <arg>-Xlint:-options</arg>
+              </compilerArgs>
             </configuration>
           </execution>
         </executions>
+
+        <dependencies>
+          <dependency>
+            <groupId>io.clientcore</groupId>
+            <artifactId>annotation-processor</artifactId>
+            <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:annotation-processor;current} -->
+          </dependency>
+        </dependencies>
       </plugin>
 
       <plugin>
