move annotation-processor module to sdk/tools

--- a/sdk/tools/ci.yml
+++ b/sdk/tools/ci.yml
@@ -7,12 +7,13 @@ trigger:
       - /sdk/tools/azure-sdk-archetype/
       - /sdk/tools/azure-sdk-build-tool/
       - /sdk/tools/azure-openrewrite/
+      - /sdk/tools/annotation-processor/
     exclude:
       - sdk/tools/pom.xml
       - sdk/tools/azure-sdk-build-tool/pom.xml
       - sdk/tools/azure-sdk-archetype/pom.xml
       - /sdk/tools/azure-openrewrite/pom.xml
-
+      - /sdk/tools/annotation-processor/pom.xml
 pr:
   branches:
     include:
@@ -25,11 +26,13 @@ pr:
       - /sdk/tools/azure-sdk-archetype/
       - /sdk/tools/azure-sdk-build-tool/
       - /sdk/tools/azure-openrewrite/
+      - /sdk/tools/annotation-processor/
     exclude:
       - sdk/tools/pom.xml
       - sdk/tools/azure-sdk-build-tool/pom.xml
       - sdk/tools/azure-sdk-archetype/pom.xml
       - /sdk/tools/azure-openrewrite/pom.xml
+      - /sdk/tools/annotation-processor/pom.xml
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
