--- a/sdk/tools/pom.xml
+++ b/sdk/tools/pom.xml
@@ -12,5 +12,6 @@
     <module>azure-sdk-archetype</module>
     <module>azure-sdk-build-tool</module>
     <module>azure-openrewrite</module>
+    <module>annotation-processor</module>
   </modules>
 </project>
