--- a/sdk/servicenetworking/azure-resourcemanager-servicenetworking/pom.xml
+++ b/sdk/servicenetworking/azure-resourcemanager-servicenetworking/pom.xml
@@ -18,7 +18,7 @@
   <packaging>jar</packaging>
 
   <name>Microsoft Azure SDK for TrafficController Management</name>
-  <description>This package contains Microsoft Azure SDK for TrafficController Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. Traffic Controller Provider management API. Package tag 2024-05-01-preview.</description>
+  <description>This package contains Microsoft Azure SDK for TrafficController Management SDK. For documentation on how to use this package, please see https://aka.ms/azsdk/java/mgmt. Traffic Controller Provider management API. Package tag package-2025-01-01.</description>
   <url>https://github.com/Azure/azure-sdk-for-java</url>
 
   <licenses>
@@ -46,6 +46,7 @@
     <jacoco.min.linecoverage>0</jacoco.min.linecoverage>
     <jacoco.min.branchcoverage>0</jacoco.min.branchcoverage>
     <revapi.skip>true</revapi.skip>
+    <spotless.skip>false</spotless.skip>
   </properties>
   <dependencies>
     <dependency>
