put var in quotes

--- a/eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
+++ b/eng/pipelines/templates/steps/generate-project-list-and-cache-maven-repository.yml
@@ -34,7 +34,7 @@ steps:
       ExcludePaths: ${{parameters.ExcludePaths}}
 
   - pwsh: |
-      $temp = $(ArtifactPackageNames)
+      $temp = '$(ArtifactPackageNames)'
       if ($temp) {
         Write-Host "ArtifactPackageNames is set, value=$temp"
       } else {
