--- a/sdk/clientcore/annotation-processor/pom.xml
+++ b/sdk/clientcore/annotation-processor/pom.xml
@@ -110,7 +110,7 @@
     <dependency>
       <groupId>io.clientcore</groupId>
       <artifactId>core</artifactId>
-      <version>1.0.0-beta.4</version> <!-- {x-version-update;io.clientcore:core;current} -->
+      <version>1.0.0-beta.4</version> <!-- {x-version-update;io.clientcore:core;dependency} -->
     </dependency>
 
     <!-- Unit Test -->
