Updates to enable CI

--- a/sdk/tools/azure-openrewrite/pom.xml
+++ b/sdk/tools/azure-openrewrite/pom.xml
@@ -40,6 +40,12 @@
             <scope>test</scope>
         </dependency>
 
+      <dependency>
+        <groupId>org.openrewrite</groupId>
+        <artifactId>rewrite-java-21</artifactId>
+        <scope>test</scope>
+      </dependency>
+
         <!-- rewrite-maven dependency only necessary for Maven Recipe development -->
         <dependency>
             <groupId>org.openrewrite</groupId>
