--- a/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/migrationRecipes/core/azure-core-migration.yml
+++ b/sdk/tools/azure-openrewrite/src/main/resources/META-INF/rewrite/migrationRecipes/core/azure-core-migration.yml
@@ -140,3 +140,5 @@ recipeList:
 
   - com.azure.openrewrite.core.ResponseRecipe
   - com.azure.openrewrite.core.RetryOptionsConstructorRecipe
+  - com.azure.openrewrite.TypeReferenceRecipe
+  - com.azure.openrewrite.RemoveFixedDelayRecipe
