add additional module for annot-proc

--- a/sdk/clientcore/annotation-processor/ci.yml
+++ b/sdk/clientcore/annotation-processor/ci.yml
@@ -40,3 +40,6 @@ extends:
         groupId: io.clientcore
         safeName: annotationprocessor
         releaseInBatch: ${{ parameters.release_clientcoreannotationprocessor }}
+    AdditionalModules:
+      - name: annotation-processor-test
+        groupId: io.clientcore
