$dependenciesFilePath = './../../1/s/eng/versioning/external_dependencies.txt'

--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -40,7 +40,7 @@ steps:
       ./gradlew clean build -x test publishToMavenLocal
 
       # Define the path to the external_dependencies.txt file
-      $dependenciesFilePath = './_work/1/s/eng/versioning/external_dependencies.txt'
+      $dependenciesFilePath = './../../1/s/eng/versioning/external_dependencies.txt'
 
       # Update the version in the external_dependencies.txt file
       $newVersionInExternalDependenciesFile = "com.openai:openai-java;$newVersion"
