add run python to update external version

--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -47,5 +47,9 @@ steps:
       $dependenciesContent = Get-Content -Path $dependenciesFilePath -Raw
       $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
       Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
+        
+      # Run the version update script
+      Write-Host "Running the version update script"
+      python ./../../1/s/eng/versioning/update_versions.py --bt client --ut external_dependency --sr
     displayName: Clone, build, and update OpenAI Java with necessary steps
     workingDirectory: $(Agent.TempDirectory)
