--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -50,6 +50,6 @@ steps:
         
       # Run the version update script
       Write-Host "Running the version update script"
-      python ./../../1/s/eng/versioning/update_versions.py --bt client --ut external_dependency --sr
+      python ../../1/s/eng/versioning/update_versions.py --bt client --ut external_dependency --sr
     displayName: Clone, build, and update OpenAI Java with necessary steps
     workingDirectory: $(Agent.TempDirectory)
