--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -59,6 +59,8 @@ steps:
       dir ../../1/s/eng/versioning  
         
       Write-Host "Running the version update script"
-      python ../../1/s/eng/versioning/update_versions.py --bt client --ut external_dependency --sr
+        
+      cd ../../1/s/
+      python eng/versioning/update_versions.py --bt client --ut external_dependency --sr
     displayName: Clone, build, and update OpenAI Java with necessary steps
     workingDirectory: $(Agent.TempDirectory)
