Could not find artifact com.openai:openai-java:jar:0.22.0-SNAPSHOT

--- a/sdk/openai/openai-build.yml
+++ b/sdk/openai/openai-build.yml
@@ -46,20 +46,10 @@ steps:
       $newVersionInExternalDependenciesFile = "com.openai:openai-java;$newVersion"
       $dependenciesContent = Get-Content -Path $dependenciesFilePath -Raw
       $updatedDependenciesContent = $dependenciesContent -replace 'com.openai:openai-java;[0-9.]+', $newVersionInExternalDependenciesFile
+      Write-Host "Updated the version in the external_dependencies.txt file: $updatedDependenciesContent"        
       Set-Content -Path $dependenciesFilePath -Value $updatedDependenciesContent
         
-      Write-Host "Updated the version in the external_dependencies.txt file $updatedDependenciesContent"  
-        
-      # Run the version update script
-      Write-Host "dir ../../1/s/"
-      dir ../../1/s/
-      Write-Host "dir ../../1/s/eng/"  
-      dir ../../1/s/eng/
-      Write-Host "dir ../../1/s/eng/versioning  "
-      dir ../../1/s/eng/versioning  
-        
       Write-Host "Running the version update script"
-        
       cd ../../1/s/
       python eng/versioning/update_versions.py --bt client --ut external_dependency --sr
     displayName: Clone, build, and update OpenAI Java with necessary steps
